--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animatedtxt": "^1.3.0",
     "axios": "^1.2.1",
+    "ethers": "^5.7.1",
+    "ethers-eip712": "^0.2.0",
     "history": "^5.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -18,6 +21,7 @@
     "react-scroll": "^1.8.8",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
+    "wagmi": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
